--- a/Web/Views/Cours/Edit.cshtml
+++ b/Web/Views/Cours/Edit.cshtml
@@ -25,6 +25,13 @@
                 @Html.ValidationMessageFor(model => model.titre, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.cour, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.cour, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.cour, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.video, htmlAttributes: new { @class = "control-label col-md-2" })
