--- a/Web/Views/Formateur/Delete.cshtml
+++ b/Web/Views/Formateur/Delete.cshtml
@@ -23,7 +23,7 @@
             </dd>
         *@
         <dt>
-            @Html.DisplayNameFor(model => model.dis)
+            @Html.DisplayNameFor(model => model.Disponible)
         </dt>
 
         <dd>
