--- a/Web/Views/Formateur/create.cshtml
+++ b/Web/Views/Formateur/create.cshtml
@@ -17,10 +17,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.dis, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Disponible, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.dis, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.dis, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Disponible, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Disponible, "", new { @class = "text-danger" })
             </div>
         </div>
 
