--- a/Web/Views/Qsm/Edit.cshtml
+++ b/Web/Views/Qsm/Edit.cshtml
@@ -2,8 +2,6 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Back.cshtml";
-
 }
 
 <h2>Edit</h2>
@@ -75,9 +73,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.formationEnLigne_formationElLigneId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.formationEnLigne_formationElLigneId, "formationEnLigne_formationElLigneId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.formationEnLigne_formationElLigneId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("formationEnLigne_formationElLigneId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.formationEnLigne_formationElLigneId, "", new { @class = "text-danger" })
             </div>
         </div>
