--- a/Web/Views/Claim/Create.cshtml
+++ b/Web/Views/Claim/Create.cshtml
@@ -34,15 +34,7 @@
             </div>
         </div>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.fich, htmlAttributes: new { @class = "control-label col-md-2" })
-            <input type="file" name="ImageFile" required />
-
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.fich, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.fich, "", new { @class = "text-danger" })
-
-            </div>*@
+      
 
         <div class="form-group">
             <div class="editor-label">
@@ -54,45 +46,6 @@
             </div>
         </div>
 
-        @*<@*div class="form-group">
-                @Html.LabelFor(model => model.comment, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.comment, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.comment, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.dateclose, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.dateclose, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.dateclose, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.dateopen, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.dateopen, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.dateopen, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.reponse, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.reponse, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.reponse, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.statut, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EnumDropDownListFor(model => model.statut, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.statut, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
 
 
         <div class="form-group">
@@ -119,7 +72,7 @@
 
         <script type="text/javascript">
             function ajout() {
-                if (confirm(" RQ:aucune modification ne sera autorisée aprés l'ajout ")) {
+                if (confirm(" RQ: Aucune modification ne sera autorisée aprés l'ajout ")) {
                     return true;
                 } else {
                     return false;
@@ -137,7 +90,5 @@
         </div>
     </div>
 }
-@*<div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>*@
+
 
