--- a/Web/Views/Cours/Details.cshtml
+++ b/Web/Views/Cours/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Domain.Entities.cours
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Cours";
     Layout = "~/Views/Shared/_Back.cshtml";
 
 }
@@ -12,7 +12,11 @@
 
 
     <a href="@Url.Action("Create" , "formationenligne")">Add new formation </a>
-    
+<a href="@Url.Action("betha" , "Cours", new { id = Model.courId })">Valider </a>
+
+ 
+
+
 
 
    
