--- a/Web/Views/FormationEnLigne/Index.cshtml
+++ b/Web/Views/FormationEnLigne/Index.cshtml
@@ -53,7 +53,9 @@
                         </div><!-- /product__details -->
 
                     </div>
-                            <div class="add-to-cart">@Html.ActionLink("Participer", "Participer","", new { id = @p.formationElLigneId })</div>
+                    @Html.ActionLink("Participer", "Participer", new { id = p.formationElLigneId })
+
+
 
 
                 </article><!-- /product -->
